--- a/package.json
+++ b/package.json
@@ -18,6 +18,16 @@
   },
   "homepage": "https://github.com/MPSBeats/test_qualite#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0"
-  }
+  },
+  "devDependencies": {
+    "jest": "^30.2.0",
+    "supertest": "^7.1.4"
+  },
+  "scripts": {
+  "start": "node server.js",
+  "test": "jest"
+}
+  
 }
